--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -73,17 +73,29 @@ services:
     networks:
       - thahawuru_network
 
-  # Blockchain Wallet Backend (Node.js, Solidity - Hardhat)
+  ganache:
+    image: trufflesuite/ganache-cli:v6.12.2
+    command: ["ganache-cli", "-p", "7545"]
+    ports:
+      - "7545:7545"
+    networks:
+      - thahawuru_network
+
   blockchain-wallet:
-    container_name: thahawuru_blockchain_wallet
     build:
       context: ../blockchain-wallet
       dockerfile: Dockerfile
-    # environment:
+    environment:
+      - GANACHE_URL=http://ganache:7545
+      - DEP_TOKEN=depAPIAccessToken
+      # Private key and contract address will be dynamically populated
+    depends_on:
+      - ganache
     ports:
       - "8082:8082"
     networks:
       - thahawuru_network
+    entrypoint: ["/app/startup.sh"]
 
   # Thahawuru Web Frontend (React, Angular, etc.)
   thahawuru-web:
